--- a/Ailurus/Ailurus.csproj
+++ b/Ailurus/Ailurus.csproj
@@ -5,6 +5,7 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Folder Include="DTO\Requests" />
     <Folder Include="Model\" />
     <Folder Include="Service\" />
     <Folder Include="wwwroot\" />
