--- a/Ailurus/Ailurus.csproj
+++ b/Ailurus/Ailurus.csproj
@@ -19,4 +19,11 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
   </ItemGroup>
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\ailurus-api.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\ailurus-mocked-api.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\fulgens.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\FulgensMap.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\main.js" />
+  </ItemGroup>
 </Project>
